<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/title_dialog_custom_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/linear_open_gallery"
        android:background="@drawable/draw_dialog_btn">

        <ImageView
            app:srcCompat="@drawable/ic_photo"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:textSize="18sp"
            android:paddingStart="10dp"
            android:text="@string/open_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/linear_open_camera"
        android:background="@drawable/draw_dialog_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            app:srcCompat="@drawable/ic_camera"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:textSize="18sp"
            android:paddingStart="10dp"
            android:text="@string/open_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="20dp"
        android:text="@string/cancel"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>