<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.prostage.l_pha.dental_user.activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="3dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                android:src="@drawable/logoimg" />

            <TextView
                android:id="@+id/titleBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/toolbar_top_text"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="100">

            <ImageView
                android:id="@+id/linearLayoutImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_weight="50"
                android:scaleType="centerCrop"
                android:src="@drawable/background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="20"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/draw_circle_edittext"
                    android:hint="@string/text_login_user"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:textSize="@dimen/textsize_login" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/draw_circle_edittext"
                    android:hint="@string/text_login_pass"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textSize="@dimen/textsize_login" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBoxRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_login_remember"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textsize_login" />

                <Button
                    android:id="@+id/buttonSignin"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:background="@drawable/draw_login_btn"
                    android:text="@string/text_login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_login" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
