<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".fragment.HomeFragment">

    <RelativeLayout
        android:id="@+id/linearLayoutImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:background="@drawable/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:background="#99c5ed72"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/btn_text_color2"
                android:textSize="@dimen/textsize_home" />

            <TextView
                android:id="@+id/textViewID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="@dimen/textsize_home" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTime"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/text_top_1_2"
            android:textSize="@dimen/textsize_home" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/draw_circle_home"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:text="@string/text_top_1_5"
                    android:textSize="@dimen/textsize_home" />

                <TextView
                    android:id="@+id/textViewReservationDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end|center_vertical"
                    android:layout_marginEnd="15dp"
                    android:textSize="@dimen/textsize_home" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:background="@color/text_color_bottom" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:text="@string/text_top_1_6"
                    android:textSize="@dimen/textsize_home" />

                <TextView
                    android:id="@+id/textViewReservationTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:gravity="right|center_vertical"
                    android:textSize="@dimen/textsize_home" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:background="@drawable/draw_home_btn_left"
            android:text="@string/btn_top_1"
            android:textColor="@color/btn_text_color1" />

        <Button
            android:id="@+id/buttonChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            android:background="@drawable/draw_home_btn_right"
            android:text="@string/btn_top_2"
            android:textColor="@color/btn_text_color1" />

    </LinearLayout>

</LinearLayout>